--- a/mods/fabric-api.pw.toml
+++ b/mods/fabric-api.pw.toml
@@ -3,11 +3,11 @@ filename = "fabric-api-0.76.0+1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/P7dR8mSH/versions/hfsU4hXq/fabric-api-0.76.0%2B1.19.2.jar"
 hash-format = "sha1"
 hash = "f29a349b29324338ebe3acaa2914637008be15f4"
+mode = "metadata:curseforge"
 
 [update]
-[update.modrinth]
-mod-id = "P7dR8mSH"
-version = "hfsU4hXq"
+[update.curseforge]
+file-id = 4438705
+project-id = 306612
