--- a/mods/plasmo-voice.pw.toml
+++ b/mods/plasmo-voice.pw.toml
@@ -1,13 +1,13 @@
 name = "Plasmo Voice"
-filename = "plasmovoice-fabric-1.19.2-2.0.0+3577e26.jar"
+filename = "plasmovoice-fabric-1.19.2-2.0.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/1bZhdhsH/versions/NNqLdeeo/plasmovoice-fabric-1.19.2-2.0.0%2B3577e26.jar"
+url = "https://cdn.modrinth.com/data/1bZhdhsH/versions/btYEf3o7/plasmovoice-fabric-1.19.2-2.0.0.jar"
 hash-format = "sha1"
-hash = "bb0d8df549466606f7e0ccdc6fbc85403740faef"
+hash = "b04d2ab60d7b6b6e8b57a016596b326d5a547a8c"
 
 [update]
 [update.modrinth]
 mod-id = "1bZhdhsH"
-version = "NNqLdeeo"
+version = "btYEf3o7"
