--- a/mods/farmers-delight-fabric.pw.toml
+++ b/mods/farmers-delight-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "Farmer's Delight [Fabric]"
-filename = "farmers-delight-fabric-1.19.X-1.3.9.jar"
+filename = "farmers-delight-fabric-1.19.X-1.3.10-SNAPSHOT+nmc.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/4EakbH8e/versions/baQ9tohQ/farmers-delight-fabric-1.19.X-1.3.9.jar"
+url = "https://github.com/Atakku/farmers-delight-fabric/releases/download/1.3.10-SNAPSHOT%2Bnmc/farmers-delight-fabric-1.3.10-SNAPSHOT+nmc.jar"
 hash-format = "sha1"
-hash = "5ee4d71ca173a6c2164a252ae092f2b9d9afd4cf"
+hash = "82b74ce2eb05c9e03c9a89c6880b2697cdc8840e"
 
-[update]
-[update.modrinth]
-mod-id = "4EakbH8e"
-version = "baQ9tohQ"
+#[update]
+#[update.modrinth]
+#mod-id = "4EakbH8e"
+#version = "baQ9tohQ"
