--- a/mods/bluemap.pw.toml
+++ b/mods/bluemap.pw.toml
@@ -1,13 +1,13 @@
 name = "BlueMap"
-filename = "BlueMap-3.12-fabric-1.19.jar"
+filename = "BlueMap-3.13-fabric-1.19.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/swbUV1cr/versions/P2QsELdN/BlueMap-3.12-fabric-1.19.jar"
+url = "https://cdn.modrinth.com/data/swbUV1cr/versions/51epxpKG/BlueMap-3.13-fabric-1.19.jar"
 hash-format = "sha1"
-hash = "e96d01546118ffc7ced36697232fc082beaf6cec"
+hash = "ae3439881857976e643bb8990827dba42efb8948"
 
 [update]
 [update.modrinth]
 mod-id = "swbUV1cr"
-version = "P2QsELdN"
+version = "51epxpKG"
