--- a/mods/emi-loot.pw.toml
+++ b/mods/emi-loot.pw.toml
@@ -1,13 +1,13 @@
 name = "EMI Loot"
-filename = "emi_loot-0.5.0+1.19.jar"
+filename = "emi_loot-0.6.1+1.19.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/qbbO7Jns/versions/OeVpkByV/emi_loot-0.5.0%2B1.19.jar"
+url = "https://cdn.modrinth.com/data/qbbO7Jns/versions/8VxvWtcW/emi_loot-0.6.1%2B1.19.jar"
 hash-format = "sha1"
-hash = "7965f08254a76aeb97bb72ce9f65be92b12ec5bf"
+hash = "c30e2a25a5521bde65fb51b60271080dd609dce2"
 
-[update]
-[update.modrinth]
-mod-id = "qbbO7Jns"
-version = "OeVpkByV"
+#[update]
+#[update.modrinth]
+#mod-id = "qbbO7Jns"
+#version = "8VxvWtcW"
