--- a/mods/chat-heads.pw.toml
+++ b/mods/chat-heads.pw.toml
@@ -7,12 +7,12 @@ url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/iFYnpixb/chat_heads-0.10.
 hash-format = "sha1"
 hash = "cc67b94ff4c6c4d139d894a29b1a43c07da93605"
 
+[option]
+optional = true
+default = true
+description = "Performance impact: Minimal\n\nDescription: This clientside mod adds player heads next to chat messages. It makes telling various people in chat apart a bit easier, and it looks hella nice."
+
 [update]
 [update.modrinth]
 mod-id = "Wb5oqrBJ"
 version = "iFYnpixb"
-
-[option]
-optional = false
-description = "Performance impact: Minimal\n\nDescription: This clientside mod adds player heads next to chat messages. It makes telling various people in chat apart a bit easier, and it looks hella nice."
-default = true
