--- a/mods/ebe.pw.toml
+++ b/mods/ebe.pw.toml
@@ -7,6 +7,11 @@ url = "https://cdn.modrinth.com/data/OVuFYfre/versions/fZx04xgT/enhancedblockent
 hash-format = "sha1"
 hash = "fde7ffee932782c7718fd0596864aa9058b7b93c"
 
+[option]
+optional = true
+default = true
+description = "Performance impact: Improvement\n\nDescription: EBE is a 100% client side Minecraft mod for the Fabric mod loader which aims to increase the performance of block entity rendering, as well as offer customizability via resource packs."
+
 [update]
 [update.modrinth]
 mod-id = "OVuFYfre"
