--- a/mods/extrasounds.pw.toml
+++ b/mods/extrasounds.pw.toml
@@ -7,6 +7,11 @@ url = "https://cdn.modrinth.com/data/uPWCQrVL/versions/yV1SwVzK/extrasounds-2.3.
 hash-format = "sha1"
 hash = "c43ac9ffe58cbf59b90eeb4be1a6aad40ebbfbfd"
 
+[option]
+optional = true
+default = true
+description = "Performance impact: Improvement\n\nDescription: EBE is a 100% client side Minecraft mod for the Fabric mod loader which aims to increase the performance of block entity rendering, as well as offer customizability via resource packs."
+
 [update]
 [update.modrinth]
 mod-id = "uPWCQrVL"
