--- a/mods/iris.pw.toml
+++ b/mods/iris.pw.toml
@@ -7,6 +7,11 @@ url = "https://cdn.modrinth.com/data/YL57xq9U/versions/7cPNddw8/iris-mc1.19.2-1.
 hash-format = "sha1"
 hash = "5377f13f7315dd48111bd431bb8ea6e6137a8c62"
 
+[option]
+optional = true
+default = true
+description = "Performance impact: Depends\n\nDescription: A modern shaders mod for Minecraft intended to be compatible with existing OptiFine shader packs"
+
 [update]
 [update.modrinth]
 mod-id = "YL57xq9U"
