--- a/mods/modmenu.pw.toml
+++ b/mods/modmenu.pw.toml
@@ -7,6 +7,11 @@ url = "https://cdn.modrinth.com/data/mOgUt4GM/versions/gSoPJyVn/modmenu-4.2.0-be
 hash-format = "sha1"
 hash = "6e627ee1b31f5be89e14c85e888f47463d8da9c2"
 
+[option]
+optional = true
+default = true
+description = "Performance impact: None\n\nDescription: Adds a mod menu to view the list of mods you have installed."
+
 [update]
 [update.modrinth]
 mod-id = "mOgUt4GM"
