--- a/mods/nmc-menu-music.pw.toml
+++ b/mods/nmc-menu-music.pw.toml
@@ -2,6 +2,11 @@ name = "NMC Menu Music"
 filename = "nmc-menu-music-0.0.1.jar"
 side = "client"
 
+[option]
+optional = true
+default = true
+description = "Performance impact: None\n\nDescription: Changes main menu sound definition to include all music in Minecraft, including disks"
+
 [download]
 url = "https://raw.githubusercontent.com/Atakku/neko.mc-mods/main/nmc-menu-music-0.0.1.jar"
 hash-format = "sha1"
