--- a/mods/screenshot-to-clipboard.pw.toml
+++ b/mods/screenshot-to-clipboard.pw.toml
@@ -8,7 +8,7 @@ hash-format = "sha1"
 hash = "39c55d7e0ebe4a7f626e0d4bc85b8d2bea353092"
 
 [option]
-optional = false
+optional = true
 default = true
 description = "Performance impact: None\n\nDescription: Any time you take a screenshot in the game, the image data is copied to the clipboard. You can then paste this anywhere (e.g. Discord, Imgur, Reddit) to upload the image and share it with others."
 
