--- a/mods/wavey-capes.pw.toml
+++ b/mods/wavey-capes.pw.toml
@@ -8,7 +8,7 @@ hash-format = "sha1"
 hash = "06128ee3e955343a1ed31df095625891616613cd"
 
 [option]
-optional = false
+optional = true
 default = true
 description = "Performance impact: Minimal\n\nDescription: The cape shouldn't be a static slab. WaveyCapes mod animates the cape in a more fluent way, adding physics and rendering it in one bent part instead of small cubes. You can change between rendering styles, cape behavior, and wind effects in the config screen accessible via the mod-list (requires Mod Menu on fabric)."
 
