--- a/mods/extrasounds.pw.toml
+++ b/mods/extrasounds.pw.toml
@@ -10,7 +10,7 @@ hash = "c43ac9ffe58cbf59b90eeb4be1a6aad40ebbfbfd"
 [option]
 optional = true
 default = true
-description = "Performance impact: Improvement\n\nDescription: EBE is a 100% client side Minecraft mod for the Fabric mod loader which aims to increase the performance of block entity rendering, as well as offer customizability via resource packs."
+description = "Performance impact: Minimal\n\nDescription: Adds more sounds to Minecraft, like sounds when you scroll the hotbar, the creative inventory, pick up or place items in inventories, and more!"
 
 [update]
 [update.modrinth]
