--- a/config/plasmovoice/server/config.toml
+++ b/config/plasmovoice/server/config.toml
@@ -17,7 +17,7 @@ port = 0
 sample_rate = 48000
 keep_alive_timeout_ms = 15000
 mtu_size = 1024
-client_mod_required = true
+client_mod_required = false
 client_mod_required_check_timeout_ms = 15000
 
 [voice.proximity]
