--- a/mods/craftpresence.pw.toml
+++ b/mods/craftpresence.pw.toml
@@ -8,7 +8,7 @@ hash-format = "sha1"
 hash = "dede70bb7d61ebe7a63ba8e4864616f28d170320"
 
 [option]
-optional = true
+optional = false
 default = true
 description = "Performance impact: None\n\nDescription: Completely customize the way others see you play Minecraft via Discord's Rich Presence API & the DiscordIPC API by jagrosh!"
 
