--- a/mods/i-know-what-im-doing.pw.toml
+++ b/mods/i-know-what-im-doing.pw.toml
@@ -8,7 +8,7 @@ hash-format = "sha1"
 hash = "6b8b9d16217798367e8ba2917e5357fef2bd7c43"
 
 [option]
-optional = true
+optional = false
 default = true
 description = "Performance impact: None\n\nDescription: This Fabric mod for Minecraft 1.19+ adds a neat little particle effect to leaf blocks.\nUsers can configure which types of leaf blocks will drop leaves and the frequency that these leaves are dropped at."
 
