--- a/mods/no-telemetry.pw.toml
+++ b/mods/no-telemetry.pw.toml
@@ -8,7 +8,7 @@ hash-format = "sha1"
 hash = "6caa14083d087d0fc0b6af47d0e5d27196816150"
 
 [option]
-optional = true
+optional = false
 default = true
 description = "Performance impact: None\n\nDescription: Disable the telemetry introduced in 21w38a"
 
