--- a/mods/menumusic.pw.toml
+++ b/mods/menumusic.pw.toml
@@ -8,7 +8,7 @@ hash-format = "sha1"
 hash = "485fd14157214624e00d57ab3c315cf5f024a2ec"
 
 [option]
-optional = true
+optional = false
 default = true
 description = "Performance impact: Minimal\n\nDescription: Change the title menu music without much fuzz!"
 
