--- a/mods/nmc-menu-background.pw.toml
+++ b/mods/nmc-menu-background.pw.toml
@@ -3,7 +3,7 @@ filename = "nmc-menu-background-0.0.1.jar"
 side = "client"
 
 [option]
-optional = true
+optional = false
 default = true
 description = "Performance impact: None\n\nDescription: Changes dirt backround in menu's to gray concrete"
 
