--- a/mods/create-fabric.pw.toml
+++ b/mods/create-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Fabric"
-filename = "create-fabric-0.5.0.i-961+1.19.2.jar"
+filename = "create-fabric-0.5.0.i-989+1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Xbc0uyRg/versions/eiOEbe83/create-fabric-0.5.0.i-961%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/Xbc0uyRg/versions/OzM1R01X/create-fabric-0.5.0.i-989%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "3be598ac8286fcff461b22705fbc877c6c2249f1"
+hash = "24db1566dda20a1c760d4477943e34daaaa5695c"
 
 [update]
 [update.modrinth]
 mod-id = "Xbc0uyRg"
-version = "eiOEbe83"
+version = "OzM1R01X"
