--- a/world/serverconfig/openpartiesandclaims-server.toml
+++ b/world/serverconfig/openpartiesandclaims-server.toml
@@ -10,12 +10,90 @@
 	playerSubConfigLimit = 32
 	#A list of options in the player config that individual players can reconfigure. If an option is in neither of the configurable option lists,
 	#then the value in the default player config is used across the server. Check the default player config .toml file for the option names.
-	playerConfigurablePlayerConfigOptions = ["claims.protectClaimedChunks", "claims.forceload.enabled", "claims.name", "claims.color", "claims.protection.fromParty", "claims.protection.fromAllyParties", "claims.protection.buttonsFromProjectiles", "claims.protection.targetsFromProjectiles", "claims.protection.platesFromPlayers", "claims.protection.platesFromMobs", "claims.protection.platesFromOther", "claims.protection.tripwireFromPlayers", "claims.protection.tripwireFromMobs", "claims.protection.tripwireFromOther", "claims.protection.cropTrample", "claims.protection.playerLightning", "claims.protection.fromFrostWalking", "claims.protection.entitiesFromPlayers", "claims.protection.entitiesFromMobs", "claims.protection.entitiesFromOther", "claims.protection.entitiesRedirect", "claims.protection.entitiesFromExplosions", "claims.protection.entitiesFromFire", "claims.protection.netherPortalsPlayers", "claims.protection.netherPortalsMobs", "claims.protection.netherPortalsOther", "claims.protection.fluidBarrier", "claims.protection.dispenserBarrier", "claims.protection.pistonBarrier", "claims.protection.itemTossPlayers", "claims.protection.itemTossMobs", "claims.protection.itemTossOther", "claims.protection.itemTossRedirect", "claims.protection.mobLoot", "claims.protection.playerDeathLoot", "claims.protection.itemPickupPlayers", "claims.protection.itemPickupMobs", "claims.protection.itemPickupRedirect", "claims.protection.xpPickup", "claims.protection.raids", "claims.protection.naturalSpawnHostile", "claims.protection.naturalSpawnFriendly", "claims.protection.spawnersHostile", "claims.protection.spawnersFriendly", "parties.name", "parties.shareLocationWithParty", "parties.shareLocationWithMutualAllyParties", "parties.receiveLocationsFromParty", "parties.receiveLocationsFromMutualAllyParties", "claims.protection.exceptionGroups.block.interact.Controls", "claims.protection.exceptionGroups.block.interact.Doors", "claims.protection.exceptionGroups.block.interact.Chests", "claims.protection.exceptionGroups.block.interact.Barrels", "claims.protection.exceptionGroups.block.interact.Ender_Chests", "claims.protection.exceptionGroups.block.interact.Shulker_Boxes", "claims.protection.exceptionGroups.block.interact.Furnaces", "claims.protection.exceptionGroups.block.interact.Hoppers", "claims.protection.exceptionGroups.block.interact.Dispenser-like", "claims.protection.exceptionGroups.block.interact.Anvils", "claims.protection.exceptionGroups.block.interact.Beds", "claims.protection.exceptionGroups.block.interact.Beacons", "claims.protection.exceptionGroups.block.interact.Enchanting_Tables", "claims.protection.exceptionGroups.block.break.Crops", "claims.protection.exceptionGroups.entity.interact.Traders", "claims.protection.exceptionGroups.entity.handInteract.Item_Frames", "claims.protection.exceptionGroups.entity.interact.Armor_Stands", "claims.protection.exceptionGroups.entity.break.Livestock", "claims.protection.exceptionGroups.entity.blockAccess.Villagers", "claims.protection.exceptionGroups.entity.entityAccess.Zombies", "claims.protection.exceptionGroups.entity.droppedItemAccess.Villagers", "claims.protection.exceptionGroups.entity.droppedItemAccess.Piglins", "claims.protection.exceptionGroups.entity.droppedItemAccess.Foxes", "claims.protection.exceptionGroups.item.interact.Books", "claims.protection.exceptionGroups.entity.barrier.Ender_Pearls", "/*remove comment to enable*/claims.protection.exceptionGroups.entity.barrier.Players"]
+	playerConfigurablePlayerConfigOptions = [
+		"parties.name", 
+		#"parties.shareLocationWithParty", 
+		#"parties.shareLocationWithMutualAllyParties", 
+		#"parties.receiveLocationsFromParty", 
+		#"parties.receiveLocationsFromMutualAllyParties", 
+
+		"claims.protectClaimedChunks", 
+		"claims.forceload.enabled", 
+		"claims.name", 
+		"claims.color", 
+		"claims.protection.fromParty", 
+		"claims.protection.fromAllyParties", 
+		"claims.protection.buttonsFromProjectiles", 
+		"claims.protection.targetsFromProjectiles", 
+		"claims.protection.platesFromPlayers", 
+		"claims.protection.platesFromMobs", 
+		"claims.protection.platesFromOther", 
+		"claims.protection.tripwireFromPlayers", 
+		"claims.protection.tripwireFromMobs", 
+		"claims.protection.tripwireFromOther", 
+		"claims.protection.cropTrample", 
+		"claims.protection.playerLightning", 
+		"claims.protection.fromFrostWalking", 
+		"claims.protection.entitiesFromPlayers", 
+		"claims.protection.entitiesFromMobs", 
+		"claims.protection.entitiesFromOther", 
+		"claims.protection.entitiesRedirect", 
+		"claims.protection.entitiesFromExplosions", 
+		"claims.protection.entitiesFromFire", 
+		#"claims.protection.netherPortalsPlayers", 
+		"claims.protection.netherPortalsMobs", 
+		"claims.protection.netherPortalsOther", 
+		"claims.protection.fluidBarrier", 
+		"claims.protection.dispenserBarrier", 
+		"claims.protection.pistonBarrier", 
+		"claims.protection.itemTossPlayers", 
+		"claims.protection.itemTossMobs", 
+		"claims.protection.itemTossOther", 
+		"claims.protection.itemTossRedirect", 
+		"claims.protection.mobLoot", 
+		"claims.protection.playerDeathLoot", 
+		"claims.protection.itemPickupPlayers", 
+		"claims.protection.itemPickupMobs", 
+		"claims.protection.itemPickupRedirect", 
+		"claims.protection.xpPickup", 
+		"claims.protection.raids", 
+		"claims.protection.naturalSpawnHostile", 
+		"claims.protection.naturalSpawnFriendly", 
+		"claims.protection.spawnersHostile", 
+		"claims.protection.spawnersFriendly",
+		"claims.protection.exceptionGroups.block.interact.Controls", 
+		"claims.protection.exceptionGroups.block.interact.Doors", 
+		"claims.protection.exceptionGroups.block.interact.Chests", 
+		"claims.protection.exceptionGroups.block.interact.Barrels", 
+		"claims.protection.exceptionGroups.block.interact.Ender_Chests", 
+		"claims.protection.exceptionGroups.block.interact.Shulker_Boxes", 
+		"claims.protection.exceptionGroups.block.interact.Furnaces", 
+		"claims.protection.exceptionGroups.block.interact.Hoppers", 
+		"claims.protection.exceptionGroups.block.interact.Dispenser-like",
+		"claims.protection.exceptionGroups.block.interact.Anvils", 
+		"claims.protection.exceptionGroups.block.interact.Beds", 
+		"claims.protection.exceptionGroups.block.interact.Beacons", 
+		"claims.protection.exceptionGroups.block.interact.Enchanting_Tables", 
+		"claims.protection.exceptionGroups.block.break.Crops", 
+		"claims.protection.exceptionGroups.entity.interact.Traders", 
+		"claims.protection.exceptionGroups.entity.handInteract.Item_Frames", 
+		"claims.protection.exceptionGroups.entity.interact.Armor_Stands", 
+		"claims.protection.exceptionGroups.entity.break.Livestock", 
+		"claims.protection.exceptionGroups.entity.blockAccess.Villagers", 
+		"claims.protection.exceptionGroups.entity.entityAccess.Zombies", 
+		"claims.protection.exceptionGroups.entity.droppedItemAccess.Villagers", 
+		"claims.protection.exceptionGroups.entity.droppedItemAccess.Piglins", 
+		"claims.protection.exceptionGroups.entity.droppedItemAccess.Foxes", 
+		"claims.protection.exceptionGroups.item.interact.Books", 
+		"claims.protection.exceptionGroups.entity.barrier.Ender_Pearls", 
+		"/*remove comment to enable*/claims.protection.exceptionGroups.entity.barrier.Players"]
 	#A list of additional options in the player config that OPs can reconfigure for players.
 	#This is meant for options that should be configured per player but not by the players.
 	#If an option is in neither of the configurable option lists, then the value in the default player config is used across the server.
 	#Check the default player config .toml file for the option names.
-	opConfigurablePlayerConfigOptions = ["claims.bonusChunkClaims", "claims.bonusChunkForceloads"]
+	opConfigurablePlayerConfigOptions = [
+		"claims.bonusChunkClaims"
+	]
 
 	[serverConfig.parties]
 		#Whether the parties part of this mod is enabled.
@@ -152,7 +230,9 @@
 			#Prefix "anything$" is the same as no prefix but allows interaction with any item held in the hand. Please make sure that no item does anything bad when used at an entity with such an exception.
 			#Add the same entity/tag multiple times to use multiple prefixes. Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 			#For example ["minecraft:villager", "break$minecraft:villager", "break$minecraft:(trader_|)llama"]
-			forcedEntityProtectionExceptionList = ["minecraft:minecart"]
+			forcedEntityProtectionExceptionList = [
+				"minecraft:minecart"
+			]
 			#Custom groups of entities that a player/claim config should be able to make protection exceptions for. Each group can consist of multiple entities and entity tags.
 			#A group without a prefix creates a player config option for the right-click interaction with the group entities. The format for an entity group is <group ID>{<entities/tags/wildcards separated by ,>}.
 			#The group ID should consist of at most 32 characters that are letters A-Z, numbers 0-9 or the - and _ characters, e.g. "ePiC-GUYS98{minecraft:pig, minecraft:c(ow|at), #minecraft:beehive_inhabitors}".
@@ -245,7 +325,9 @@
 			#The exact paths of the added options can be found in the default player config file after you start the server.
 			#Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 			droppedItemAccessEntityGroups = [
-        "Villagers{minecraft:villager}", "Piglins{minecraft:piglin}", "Foxes{minecraft:fox}"
+        "Villagers{minecraft:villager}", 
+				"Piglins{minecraft:piglin}", 
+				"Foxes{minecraft:fox}"
       ]
 			#A list of fake players (UUIDs or names) that shouldn't be affected by any chunk claim protection if they try to access a chunk with building protection compatible with
 			#the chunk that the fake player's origin block is positioned in, e.g. claims with the same owner and block protection option values.
@@ -260,30 +342,40 @@
 			#Make sure to always test that claim edges are protected from outside interaction by fake players that you add to this list.
 			#Wondering where to get the UUIDs or usernames of specific fake players? You can check the source code of the mods that use them or politely ask the mod authors.
 			#For example ["41C82C87-7AfB-4024-BB57-13D2C99CAE77", "FakePlayerName"]
-			staticFakePlayers = ["[IntegratedTunnels]"]
+			staticFakePlayers = [
+				"[IntegratedTunnels]"
+			]
 			#A list of Java classes of fake players that should be excluded from claim protection exceptions given to fake players with the "staticFakePlayers" option
 			#or built-in fake player support, like in the case of Create mod deployers.
 			#This option is meant for fake players similar to ComputerCraft's turtles, which take the UUID of the player that places them. It becomes a problem when a turtle takes
 			#the UUID of a fake player from "staticFakePlayers" or a deployer because the turtle then gets the same privileges without actually being stationary itself nor a deployer.
 			#Adding classes here should not break support of fake players that take the UUID of their owner. It simply takes away privileges which aren't meant for them.
 			#For example ["dan200.computercraft.shared.turtle.core.TurtlePlayer"]
-			staticFakePlayerClassExceptions = ["dan200.computercraft.shared.turtle.core.TurtlePlayer"]
+			staticFakePlayerClassExceptions = [
+				"dan200.computercraft.shared.turtle.core.TurtlePlayer"
+			]
 			#By default, right-click use of some items is allowed in protected chunks, e.g. swords, pickaxes, bows, shield, tridents, splash potions, to let the players protect themselves or interact with some blocks/entities.
 			#To remove such exceptions for specific items, add them to this list. This list applies to both using an item at air and using it at a block/entity. Supports item tags.
 			#Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 			#For example ["minecraft:trident", "minecraft:shield", "minecraft:(oak|spruce)_boat", "#minecraft:boats"]
-			additionalBannedItemsList = ["supplementaries:slingshot"]
+			additionalBannedItemsList = [
+				"supplementaries:slingshot"
+			]
 			#By default, most item right-click uses are disabled in protected chunks. To make an exception for a specific item, add it to this list. This option has a higher priority than "additionalBannedItemsList".
 			#This list applies to both using an item at air and using it at a block/entity. Supports item tags. Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 			#For example ["minecraft:fishing_rod", "minecraft:ender_pearl", "minecraft:(red|green)_bed", "#minecraft:beds"]
-			itemUseProtectionExceptionList = ["minecraft:firework_rocket"]
+			itemUseProtectionExceptionList = [
+				"minecraft:firework_rocket"
+			]
 			#Custom groups of items that a player/claim config should be able to make protection exceptions for. Each group can consist of multiple items and item tags.
 			#Each group creates a player config option for the right-click use of the group items. The format for an item group is <group ID>{<items/tags/wildcards separated by ,>}.
 			#The group ID should consist of at most 32 characters that are letters A-Z, numbers 0-9 or the - and _ characters, e.g. "ePiC-stuff98{minecraft:(writable|written)_book, minecraft:*_book, #minecraft:compasses}".
 			#The player config options created for the groups, like regular options, must be added in the "playerConfigurablePlayerConfigOptions" list for players to have access to them.
 			#The exact paths of the added options can be found in the default player config file after you start the server.
 			#Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
-			itemUseProtectionOptionalExceptionGroups = ["Books{minecraft:written_book, minecraft:writable_book}"]
+			itemUseProtectionOptionalExceptionGroups = [
+				"Books{minecraft:written_book, minecraft:writable_book}"
+			]
 			#Items that are completely banned from right-click usage on the server, claimed or not. This list applies to both using an item at air and using it at a block/entity. Supports item tags.
 			#Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 			#For example ["minecraft:trident", "minecraft:shield", "minecraft:(oak|spruce)_boat", "#minecraft:boats"]
