--- a/world/serverconfig/openpartiesandclaims-server.toml
+++ b/world/serverconfig/openpartiesandclaims-server.toml
@@ -11,18 +11,16 @@
 	#A list of options in the player config that individual players can reconfigure. If an option is in neither of the configurable option lists,
 	#then the value in the default player config is used across the server. Check the default player config .toml file for the option names.
 	playerConfigurablePlayerConfigOptions = [
-		"parties.name", 
-		#"parties.shareLocationWithParty", 
-		#"parties.shareLocationWithMutualAllyParties", 
-		#"parties.receiveLocationsFromParty", 
-		#"parties.receiveLocationsFromMutualAllyParties", 
-
-		"claims.protectClaimedChunks", 
-		"claims.forceload.enabled", 
-		"claims.name", 
-		"claims.color", 
+		# Basics
+		"parties.name",
+		"claims.name",
+		"claims.color",
+		
+		# Toggle claim from party and allies
 		"claims.protection.fromParty", 
 		"claims.protection.fromAllyParties", 
+		
+		# Basic flags
 		"claims.protection.buttonsFromProjectiles", 
 		"claims.protection.targetsFromProjectiles", 
 		"claims.protection.platesFromPlayers", 
@@ -39,8 +37,7 @@
 		"claims.protection.entitiesFromOther", 
 		"claims.protection.entitiesRedirect", 
 		"claims.protection.entitiesFromExplosions", 
-		"claims.protection.entitiesFromFire", 
-		#"claims.protection.netherPortalsPlayers", 
+		"claims.protection.entitiesFromFire",  
 		"claims.protection.netherPortalsMobs", 
 		"claims.protection.netherPortalsOther", 
 		"claims.protection.fluidBarrier", 
@@ -57,36 +54,60 @@
 		"claims.protection.itemPickupRedirect", 
 		"claims.protection.xpPickup", 
 		"claims.protection.raids", 
-		"claims.protection.naturalSpawnHostile", 
-		"claims.protection.naturalSpawnFriendly", 
-		"claims.protection.spawnersHostile", 
-		"claims.protection.spawnersFriendly",
-		"claims.protection.exceptionGroups.block.interact.Controls", 
+
+
+		# Optional exceptions
 		"claims.protection.exceptionGroups.block.interact.Doors", 
+		"claims.protection.exceptionGroups.block.interact.Trapdoors", 
+		"claims.protection.exceptionGroups.block.interact.Fence_Gates", 
+		"claims.protection.exceptionGroups.block.interact.Levers", 
+		"claims.protection.exceptionGroups.block.interact.Buttons", 
+		"claims.protection.exceptionGroups.block.interact.Analog_Levers", 
 		"claims.protection.exceptionGroups.block.interact.Chests", 
 		"claims.protection.exceptionGroups.block.interact.Barrels", 
-		"claims.protection.exceptionGroups.block.interact.Ender_Chests", 
-		"claims.protection.exceptionGroups.block.interact.Shulker_Boxes", 
-		"claims.protection.exceptionGroups.block.interact.Furnaces", 
-		"claims.protection.exceptionGroups.block.interact.Hoppers", 
-		"claims.protection.exceptionGroups.block.interact.Dispenser-like",
-		"claims.protection.exceptionGroups.block.interact.Anvils", 
-		"claims.protection.exceptionGroups.block.interact.Beds", 
+		"claims.protection.exceptionGroups.block.interact.Shulker_Boxes",
 		"claims.protection.exceptionGroups.block.interact.Beacons", 
-		"claims.protection.exceptionGroups.block.interact.Enchanting_Tables", 
-		"claims.protection.exceptionGroups.block.break.Crops", 
-		"claims.protection.exceptionGroups.entity.interact.Traders", 
-		"claims.protection.exceptionGroups.entity.handInteract.Item_Frames", 
-		"claims.protection.exceptionGroups.entity.interact.Armor_Stands", 
-		"claims.protection.exceptionGroups.entity.break.Livestock", 
-		"claims.protection.exceptionGroups.entity.blockAccess.Villagers", 
-		"claims.protection.exceptionGroups.entity.entityAccess.Zombies", 
+		"claims.protection.exceptionGroups.block.interact.Furnaces", 
+		"claims.protection.exceptionGroups.block.interact.Dispensers", 
+		"claims.protection.exceptionGroups.block.interact.Droppers", 
+		"claims.protection.exceptionGroups.block.interact.Hoppers", 
+		"claims.protection.exceptionGroups.block.interact.Anvils", 
+		"claims.protection.exceptionGroups.block.interact.Computers", 
+		"claims.protection.exceptionGroups.block.interact.Monitors", 
+		"claims.protection.exceptionGroups.block.interact.Turtles", 
+
+		"claims.protection.exceptionGroups.entity.handInteract.Villagers", 
+		"claims.protection.exceptionGroups.entity.handInteract.Wandering_Traders", 
+		"claims.protection.exceptionGroups.entity.handInteract.Minecarts", 
+		"claims.protection.exceptionGroups.entity.handInteract.Chest_Minecarts", 
+		"claims.protection.exceptionGroups.entity.handInteract.Furnace_Minecarts", 
+
+		"claims.protection.exceptionGroups.entity.barrier.Boats",
+		"claims.protection.exceptionGroups.entity.barrier.Ender_Pearls",
+
+		"claims.protection.exceptionGroups.entity.blockAccess.Villagers",
+
+		"claims.protection.exceptionGroups.entity.entityAccess.Zombies",  
+		
 		"claims.protection.exceptionGroups.entity.droppedItemAccess.Villagers", 
 		"claims.protection.exceptionGroups.entity.droppedItemAccess.Piglins", 
 		"claims.protection.exceptionGroups.entity.droppedItemAccess.Foxes", 
-		"claims.protection.exceptionGroups.item.interact.Books", 
-		"claims.protection.exceptionGroups.entity.barrier.Ender_Pearls", 
-		"/*remove comment to enable*/claims.protection.exceptionGroups.entity.barrier.Players"]
+
+		# Disabled defaults
+		#"parties.shareLocationWithParty", 
+		#"parties.shareLocationWithMutualAllyParties", 
+		#"parties.receiveLocationsFromParty", 
+		#"parties.receiveLocationsFromMutualAllyParties", 
+		#"claims.protectClaimedChunks", 
+		#"claims.forceload.enabled", 
+		#"claims.protection.netherPortalsPlayers",
+
+		# Disallow disabling hostile mobs from spawning, kinda op
+		#"claims.protection.naturalSpawnHostile", 
+		#"claims.protection.naturalSpawnFriendly", 
+		#"claims.protection.spawnersHostile", 
+		#"claims.protection.spawnersFriendly",
+	]
 	#A list of additional options in the player config that OPs can reconfigure for players.
 	#This is meant for options that should be configured per player but not by the players.
 	#If an option is in neither of the configurable option lists, then the value in the default player config is used across the server.
@@ -196,8 +217,21 @@
 			#Add the same block/tag multiple times to use multiple prefixes. Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 			#For example ["minecraft:lever", "minecraft:*_button", "break$minecraft:*_button", "break$minecraft:(*_|)sand"]
 			forcedBlockProtectionExceptionList = [
+				# Vanilla interactables
+        "minecraft:enchanting_table",
         "minecraft:crafting_table",
-        "yigd:grave"
+        "minecraft:ender_chest",
+        "#minecraft:beds",
+
+				# Player graves
+        "yigd:grave",
+
+				# Per-player Loot
+        "lootr:lootr_barrel",
+        "lootr:lootr_chest",
+        "lootr:lootr_inventory",
+        "lootr:lootr_shulker",
+        "lootr:lootr_trapped_chest",
       ]
 			#Custom groups of blocks that a player/claim config should be able to make protection exceptions for. Each group can consist of multiple blocks and block tags.
 			#A group without a prefix creates a player config option for the right-click interaction with the group blocks. The format for a block group is <group ID>{<blocks/tags/wildcards separated by ,>}.
@@ -209,20 +243,33 @@
 			#The exact paths of the added options can be found in the default player config file after you start the server.
 			#Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 			blockProtectionOptionalExceptionGroups = [
-        "Controls{minecraft:lever, #minecraft:buttons}", 
-        "Doors{#minecraft:doors, #minecraft:fence_gates, #forge:fence_gates, #minecraft:trapdoors}", 
-        "Chests{minecraft:chest, minecraft:trapped_chest, #forge:chests/wooden}", 
-        "Barrels{minecraft:barrel, #forge:barrels}", 
-        "Ender_Chests{minecraft:ender_chest, #forge:chests/ender}", 
-        "Shulker_Boxes{#minecraft:shulker_boxes}", 
-        "Furnaces{minecraft:furnace, minecraft:blast_furnace, minecraft:smoker}", 
-        "Hoppers{minecraft:hopper}", 
-        "Dispenser-like{minecraft:dispenser, minecraft:dropper}", 
+				# Passage blocking
+				"Doors{#minecraft:doors}",
+				"Trapdoors{#minecraft:trapdoors}",
+				"Fence_Gates{#c:fence_gates}",
+
+				# Redstone & Logic
+				"Levers{minecraft:lever}",
+				"Buttons{#minecraft:buttons}",
+				"Analog_Levers{create:analog_lever}",
+
+				# Storage
+        "Chests{minecraft:chest, minecraft:trapped_chest}", 
+        "Barrels{minecraft:barrel}",
+        "Shulker_Boxes{#c:shulker_boxes}",
+
+				# Interactive
+        "Beacons{minecraft:beacon}",
+        "Furnaces{minecraft:furnace, minecraft:blast_furnace, minecraft:smoker}",
+        "Dispensers{minecraft:dispenser}",
+        "Droppers{minecraft:dropper}",
+        "Hoppers{minecraft:hopper}",
         "Anvils{#minecraft:anvil}", 
-        "Beds{#minecraft:beds}", 
-        "Beacons{minecraft:beacon}", 
-        "Enchanting_Tables{minecraft:enchanting_table}", 
-        "break$Crops{#minecraft:crops}"
+
+				# Computercraft
+				"Computers{#computercraft:computer}",
+				"Monitors{#computercraft:monitor}",
+				"Turtles{#computercraft:turtle}",
       ]
 			#Entities to partially exclude from chunk protection. Supports entity type tags.
 			#Just an entity/tag ID in the list, e.g. "minecraft:horse" allows entity interaction across the server if the item in the used hand isn't blocking it.
@@ -231,7 +278,8 @@
 			#Add the same entity/tag multiple times to use multiple prefixes. Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 			#For example ["minecraft:villager", "break$minecraft:villager", "break$minecraft:(trader_|)llama"]
 			forcedEntityProtectionExceptionList = [
-				"minecraft:minecart"
+				# Allow looting minecarts
+				"hand$lootr:lootr_minecart"
 			]
 			#Custom groups of entities that a player/claim config should be able to make protection exceptions for. Each group can consist of multiple entities and entity tags.
 			#A group without a prefix creates a player config option for the right-click interaction with the group entities. The format for an entity group is <group ID>{<entities/tags/wildcards separated by ,>}.
@@ -243,16 +291,24 @@
 			#The exact paths of the added options can be found in the default player config file after you start the server.
 			#Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 			entityProtectionOptionalExceptionGroups = [
-        "Traders{minecraft:villager, minecraft:wandering_trader}", 
-        "hand$Item_Frames{minecraft:item_frame}", 
-        "break$Livestock{minecraft:cow, minecraft:mooshroom, minecraft:sheep, minecraft:chicken, minecraft:pig, minecraft:rabbit, minecraft:goat}", 
-        "Armor_Stands{minecraft:armor_stand}"
+				# Allow trading, but not stealing
+        "hand$Villagers{minecraft:villager}",
+        "hand$Wandering_Traders{minecraft:wandering_trader}",
+				
+				# Allow interacting with minecarts
+				"hand$Minecarts{minecraft:minecart}",
+				"hand$Chest_Minecarts{minecraft:chest_minecart}",
+				"hand$Furnace_Minecarts{minecraft:furnace_minecart}"
       ]
 			#Entities that are prevented from entering the claim. Supports entity type tags. An entity/tag ID in the list, e.g. "minecraft:falling_block" prevents the entities from entering.
 			#Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR. For example: "minecraft:zombie(_villager|)".
 			forcedEntityClaimBarrierList = [
-        "minecraft:falling_block", 
-        "supplementaries:slingshot_projectile"
+				# Falling block launching
+        "minecraft:falling_block",
+
+				# TNT
+        "minecraft:tnt", 
+        "minecraft:tnt_minecart",
       ]
 			#Custom groups of entities that a player/claim config should be able to enable a barrier for. Each group can consist of multiple entities and entity tags.
 			#Each group creates a player config option for controlling the entity barrier. The format for a entity group is <group ID>{<entities/tags/wildcards separated by ,>}.
@@ -261,13 +317,14 @@
 			#The exact paths of the added options can be found in the default player config file after you start the server.
 			#Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 			entityClaimBarrierOptionalGroups = [
-        "Players{minecraft:player}", 
-        "Ender_Pearls{minecraft:ender_pearl}"
+        "Boats{minecraft:boat, minecraft:chest_boat, byg:boat, byg:chest_boat}",
+        "Ender_Pearls{minecraft:ender_pearl}",
       ]
 			#Entities that can bypass all block protection. Supports entity type tags.
 			#Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 			#For example ["minecraft:(v|p)illager", "minecraft:*illager", "#minecraft:raiders"]
 			entitiesAllowedToGrief = [
+				# Sheep can eat grass in claims
         "minecraft:sheep"
       ]
 			#Entities that can bypass all protection of other entities. Supports entity type tags.
@@ -278,25 +335,11 @@
 			#Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 			#For example ["minecraft:(v|p)illager", "minecraft:*illager", "#minecraft:raiders"]
 			entitiesAllowedToGriefDroppedItems = []
-			#(Forge-only option) Mobs that can grief entities/items but not blocks. This list is used when overriding the vanilla "mob griefing" game rule value.
-			#By default, the mod assumes that any "mob griefing" game rule check is meant for block protection.
-			#This means that the "Protect Blocks From Mobs" option might cause entity or item protection, if that's what the mob is trying to affect.
-			#By adding a mob to this list, you're removing the block protection check for it during the "mob griefing" game rule check.
-			#Supports entity type tags. Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
-			#For example ["minecraft:*illager", "minecraft:(v|p)illager", "#minecraft:raiders"]
+			#(Forge-only option)
 			nonBlockGriefingMobs = []
-			#(Forge-only option) Mobs that can grief entities in ways other than attacking them, e.g. how evokers can change the color of sheep. This list is used when overriding the vanilla "mob griefing" game rule value.
-			#By default, the mod assumes that any "mob griefing" game rule check is meant for block protection only. Add a mob to this list if you want the entity protection option to be checked as well when the rule is checked.
-			#Check out the "nonBlockGriefingMobs" option if you want to also remove the default block protection check for the mob.
-			#Supports entity type tags. Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
-			#For example ["minecraft:(v|p)illager", "minecraft:*illager", "#minecraft:raiders"]
+			#(Forge-only option)
 			entityGriefingMobs = []
-			#(Forge-only option) Mobs that can grief dropped items. This list is used when overriding the vanilla "mob griefing" game rule value.
-			#By default, the mod assumes that any "mob griefing" game rule check is meant for block protection only. Add a mob to this list if you want the item pickup protection option to be checked as well when the rule is checked.
-			#This mod should detect most mobs picking up items by default, but if it doesn't already detect a specific mob, this option might help.
-			#Check out the "nonBlockGriefingMobs" option if you want to also remove the default block protection check for the mob.
-			#Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
-			#For example ["minecraft:(v|p)illager", "minecraft:*illager", "#minecraft:raiders"]
+			#(Forge-only option)
 			droppedItemGriefingMobs = []
 			#Custom groups of entities that a player/claim config should be able to make block access exceptions for (e.g. letting sheep eat grass or endermen take blocks). Each group can consist of multiple entities and entity tags.
 			#The format for an entity group is <group ID>{<entities/tags/wildcards separated by ,>}.
@@ -305,6 +348,7 @@
 			#The exact paths of the added options can be found in the default player config file after you start the server.
 			#Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 			blockAccessEntityGroups = [
+				# Villagers can be allowed to open doors and plant plants
         "Villagers{minecraft:villager}"
       ]
 			#Custom groups of entities that a player/claim config should be able to make entity access exceptions for (e.g. letting zombies kill things).
@@ -358,14 +402,16 @@
 			#To remove such exceptions for specific items, add them to this list. This list applies to both using an item at air and using it at a block/entity. Supports item tags.
 			#Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 			#For example ["minecraft:trident", "minecraft:shield", "minecraft:(oak|spruce)_boat", "#minecraft:boats"]
-			additionalBannedItemsList = [
-				"supplementaries:slingshot"
-			]
+			additionalBannedItemsList = []
+
 			#By default, most item right-click uses are disabled in protected chunks. To make an exception for a specific item, add it to this list. This option has a higher priority than "additionalBannedItemsList".
 			#This list applies to both using an item at air and using it at a block/entity. Supports item tags. Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 			#For example ["minecraft:fishing_rod", "minecraft:ender_pearl", "minecraft:(red|green)_bed", "#minecraft:beds"]
 			itemUseProtectionExceptionList = [
-				"minecraft:firework_rocket"
+				"minecraft:goat_horn",
+				"minecraft:firework_rocket",
+				"computercraft:pocket_computer_(normal,advanced)",
+				"minecraft:(written, writable)_book"
 			]
 			#Custom groups of items that a player/claim config should be able to make protection exceptions for. Each group can consist of multiple items and item tags.
 			#Each group creates a player config option for the right-click use of the group items. The format for an item group is <group ID>{<items/tags/wildcards separated by ,>}.
@@ -373,9 +419,7 @@
 			#The player config options created for the groups, like regular options, must be added in the "playerConfigurablePlayerConfigOptions" list for players to have access to them.
 			#The exact paths of the added options can be found in the default player config file after you start the server.
 			#Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
-			itemUseProtectionOptionalExceptionGroups = [
-				"Books{minecraft:written_book, minecraft:writable_book}"
-			]
+			itemUseProtectionOptionalExceptionGroups = []
 			#Items that are completely banned from right-click usage on the server, claimed or not. This list applies to both using an item at air and using it at a block/entity. Supports item tags.
 			#Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 			#For example ["minecraft:trident", "minecraft:shield", "minecraft:(oak|spruce)_boat", "#minecraft:boats"]
