--- a/mods/emi-loot.pw.toml
+++ b/mods/emi-loot.pw.toml
@@ -7,6 +7,11 @@ url = "https://cdn.modrinth.com/data/qbbO7Jns/versions/8VxvWtcW/emi_loot-0.6.1%2
 hash-format = "sha1"
 hash = "c30e2a25a5521bde65fb51b60271080dd609dce2"
 
+[option]
+optional = false
+default = true
+description = "Performance impact: Minor\n\nDescription: A loot drop (chest, block, entity) plugin for the EMI Recipe and Item viewer."
+
 #[update]
 #[update.modrinth]
 #mod-id = "qbbO7Jns"
