--- a/mods/emi.pw.toml
+++ b/mods/emi.pw.toml
@@ -7,6 +7,11 @@ url = "https://cdn.modrinth.com/data/fRiHVvU7/versions/RPPRwMBI/emi-0.7.3%2B1.19
 hash-format = "sha1"
 hash = "084fd2fb892e612049772b55d6aad1248602d260"
 
+[option]
+optional = false
+default = true
+description = "Performance impact: Minor\n\nDescription: EMI is a featureful and accessible item and recipe viewer. It brings many new features, and optimizes for the user experience. Outside of the standard Fabric/Quilt API, EMI requires zero dependencies, and can be launched with the game simply and easily."
+
 [update]
 [update.modrinth]
 mod-id = "fRiHVvU7"
