--- a/mods/emicompat.pw.toml
+++ b/mods/emicompat.pw.toml
@@ -8,7 +8,7 @@ hash-format = "sha1"
 hash = "e481ca7d09a76890921e12d53c4558dbb58b77a4"
 
 [option]
-optional = false
+optional = true
 default = true
 description = "Performance impact: Minor\n\nDescription: Adds recipe support for AE2, Farmer's Delight, AE2WTLIB and CreateAddition to EMI"
 
