--- a/mods/plasmo-voice.pw.toml
+++ b/mods/plasmo-voice.pw.toml
@@ -1,18 +1,18 @@
 name = "Plasmo Voice"
-filename = "plasmovoice-fabric-1.19.2-2.0.2.jar"
+filename = "plasmovoice-fabric-1.19.2-2.0.3.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/1bZhdhsH/versions/QWnDpfVO/plasmovoice-fabric-1.19.2-2.0.2.jar"
+url = "https://cdn.modrinth.com/data/1bZhdhsH/versions/CPTO5fua/plasmovoice-fabric-1.19.2-2.0.3.jar"
 hash-format = "sha1"
-hash = "9f781ffba59af0888e3b80ebaf15a94dedbb7e6e"
-
-[option]
-optional = true
-default = true
-description = "Performance impact: Minimal\n\nDescription: A proximity voice chat mod with audio positioning and lots of features"
+hash = "5e70b54af60c63aca18bddef37fb5eb93f085a91"
 
 [update]
 [update.modrinth]
 mod-id = "1bZhdhsH"
-version = "QWnDpfVO"
+version = "CPTO5fua"
+
+[option]
+optional = true
+description = "Performance impact: Minimal\n\nDescription: A proximity voice chat mod with audio positioning and lots of features"
+default = true
