--- a/mods/create-fabric.pw.toml
+++ b/mods/create-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Fabric"
-filename = "create-fabric-0.5.0.i-961+1.19.2.jar"
+filename = "create-fabric-0.5.0.i-991+1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Xbc0uyRg/versions/eiOEbe83/create-fabric-0.5.0.i-961%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/Xbc0uyRg/versions/MpeKaF3n/create-fabric-0.5.0.i-991%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "3be598ac8286fcff461b22705fbc877c6c2249f1"
+hash = "9f6c509505b2ca7dae52cd3a03f5a18e58cd042c"
 
 [update]
 [update.modrinth]
 mod-id = "Xbc0uyRg"
-version = "eiOEbe83"
+version = "MpeKaF3n"
